grammar/C/CParser.py
# Generated from C.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'#include'", "'return'", "'''", 
                     "'<'", "'>'", "'+'", "'-'", "'/'", "'='", "'=='", "'while'", 
                     "'for'", "'if'", "'else'", "'char'", "'float'", "'int'", 
                     "'*'", "'stdio.h'", "'const'", "'void'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WHILE", "FOR", "IF", "ELSE", "CHAR", "FLOAT", "INT", 
                      "POINTER", "FILENAME", "CONST", "VOID", "IDENTIFIER", 
                      "INTEGER", "DECIMAL", "CHARACTER", "WS", "COMMENT", 
                      "LPAREN", "RPAREN", "LCURL", "RCURL", "LSQUARE", "RSQUARE", 
                      "COMMA" ]

    RULE_program = 0
    RULE_statements = 1
    RULE_statement = 2
    RULE_function_definition = 3
    RULE_compound_statement = 4
    RULE_definition = 5
    RULE_include = 6
    RULE_conditional_statement = 7
    RULE_condition = 8
    RULE_else_statement = 9
    RULE_iteration_statement = 10
    RULE_while_statement = 11
    RULE_for_statement = 12
    RULE_expression_statement = 13
    RULE_assignment_expression = 14
    RULE_primary_expression = 15
    RULE_postfix_expression = 16
    RULE_expression = 17
    RULE_comparison_expression = 18
    RULE_additive_expression = 19
    RULE_multiplicative_expression = 20
    RULE_declaration = 21
    RULE_declaration_specifier = 22
    RULE_declarator_list = 23
    RULE_initialise_declarator = 24
    RULE_declarator = 25
    RULE_direct_declarator = 26
    RULE_identifier_list = 27
    RULE_parameter_list = 28
    RULE_parameter_declaration = 29
    RULE_assignment_operator = 30
    RULE_filename = 31
    RULE_index = 32
    RULE_value = 33
    RULE_type_specifier = 34
    RULE_pointer = 35
    RULE_type_qualifier = 36
    RULE_binary_operator = 37
    RULE_comparison_operator = 38

    ruleNames =  [ "program", "statements", "statement", "function_definition", 
                   "compound_statement", "definition", "include", "conditional_statement", 
                   "condition", "else_statement", "iteration_statement", 
                   "while_statement", "for_statement", "expression_statement", 
                   "assignment_expression", "primary_expression", "postfix_expression", 
                   "expression", "comparison_expression", "additive_expression", 
                   "multiplicative_expression", "declaration", "declaration_specifier", 
                   "declarator_list", "initialise_declarator", "declarator", 
                   "direct_declarator", "identifier_list", "parameter_list", 
                   "parameter_declaration", "assignment_operator", "filename", 
                   "index", "value", "type_specifier", "pointer", "type_qualifier", 
                   "binary_operator", "comparison_operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    WHILE=12
    FOR=13
    IF=14
    ELSE=15
    CHAR=16
    FLOAT=17
    INT=18
    POINTER=19
    FILENAME=20
    CONST=21
    VOID=22
    IDENTIFIER=23
    INTEGER=24
    DECIMAL=25
    CHARACTER=26
    WS=27
    COMMENT=28
    LPAREN=29
    RPAREN=30
    LCURL=31
    RCURL=32
    LSQUARE=33
    RSQUARE=34
    COMMA=35

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(CParser.StatementsContext,0)


        def getRuleIndex(self):
            return CParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def statements(self):
            return self.getTypedRuleContext(CParser.StatementsContext,0)


        def getRuleIndex(self):
            return CParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = CParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.statement()
                self.state = 82
                self.statements()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(CParser.Function_definitionContext,0)


        def declaration(self):
            return self.getTypedRuleContext(CParser.DeclarationContext,0)


        def include(self):
            return self.getTypedRuleContext(CParser.IncludeContext,0)


        def conditional_statement(self):
            return self.getTypedRuleContext(CParser.Conditional_statementContext,0)


        def iteration_statement(self):
            return self.getTypedRuleContext(CParser.Iteration_statementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.expression()
                self.state = 87
                self.match(CParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.function_definition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.declaration()
                self.state = 91
                self.match(CParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.match(CParser.T__1)
                self.state = 94
                self.include()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.conditional_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.iteration_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 97
                self.match(CParser.T__2)
                self.state = 98
                self.expression()
                self.state = 99
                self.match(CParser.T__0)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 101
                self.match(CParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self):
            return self.getTypedRuleContext(CParser.DefinitionContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(CParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition" ):
                return visitor.visitFunction_definition(self)
            else:
                return visitor.visitChildren(self)




    def function_definition(self):

        localctx = CParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.definition()
            self.state = 105
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURL(self):
            return self.getToken(CParser.LCURL, 0)

        def RCURL(self):
            return self.getToken(CParser.RCURL, 0)

        def statements(self):
            return self.getTypedRuleContext(CParser.StatementsContext,0)


        def getRuleIndex(self):
            return CParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = CParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_statement)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(CParser.LCURL)
                self.state = 108
                self.match(CParser.RCURL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(CParser.LCURL)
                self.state = 110
                self.statements()
                self.state = 111
                self.match(CParser.RCURL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(CParser.DeclarationContext,0)


        def getRuleIndex(self):
            return CParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = CParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.declaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filename(self):
            return self.getTypedRuleContext(CParser.FilenameContext,0)


        def getRuleIndex(self):
            return CParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = CParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_include)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(CParser.T__3)
                self.state = 118
                self.filename()
                self.state = 119
                self.match(CParser.T__3)
                pass
            elif token in [CParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(CParser.T__4)
                self.state = 122
                self.filename()
                self.state = 123
                self.match(CParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Conditional_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CParser.LPAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(CParser.ConditionContext,0)


        def RPAREN(self):
            return self.getToken(CParser.RPAREN, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(CParser.Compound_statementContext,0)


        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def else_statement(self):
            return self.getTypedRuleContext(CParser.Else_statementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_conditional_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional_statement" ):
                listener.enterConditional_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional_statement" ):
                listener.exitConditional_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional_statement" ):
                return visitor.visitConditional_statement(self)
            else:
                return visitor.visitChildren(self)




    def conditional_statement(self):

        localctx = CParser.Conditional_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conditional_statement)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(CParser.IF)
                self.state = 128
                self.match(CParser.LPAREN)
                self.state = 129
                self.condition()
                self.state = 130
                self.match(CParser.RPAREN)
                self.state = 131
                self.compound_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(CParser.IF)
                self.state = 134
                self.match(CParser.LPAREN)
                self.state = 135
                self.condition()
                self.state = 136
                self.match(CParser.RPAREN)
                self.state = 137
                self.statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(CParser.IF)
                self.state = 140
                self.match(CParser.LPAREN)
                self.state = 141
                self.condition()
                self.state = 142
                self.match(CParser.RPAREN)
                self.state = 143
                self.compound_statement()
                self.state = 144
                self.else_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.match(CParser.IF)
                self.state = 147
                self.match(CParser.LPAREN)
                self.state = 148
                self.condition()
                self.state = 149
                self.match(CParser.RPAREN)
                self.state = 150
                self.statement()
                self.state = 151
                self.else_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = CParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Else_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(CParser.ELSE, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(CParser.Compound_statementContext,0)


        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_else_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_statement" ):
                listener.enterElse_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_statement" ):
                listener.exitElse_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_statement" ):
                return visitor.visitElse_statement(self)
            else:
                return visitor.visitChildren(self)




    def else_statement(self):

        localctx = CParser.Else_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_else_statement)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(CParser.ELSE)
                self.state = 158
                self.compound_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(CParser.ELSE)
                self.state = 160
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Iteration_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def while_statement(self):
            return self.getTypedRuleContext(CParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(CParser.For_statementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_iteration_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIteration_statement" ):
                listener.enterIteration_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIteration_statement" ):
                listener.exitIteration_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIteration_statement" ):
                return visitor.visitIteration_statement(self)
            else:
                return visitor.visitChildren(self)




    def iteration_statement(self):

        localctx = CParser.Iteration_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_iteration_statement)
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.WHILE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.while_statement()
                pass
            elif token in [CParser.FOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.for_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(CParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(CParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(CParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_while_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_statement" ):
                return visitor.visitWhile_statement(self)
            else:
                return visitor.visitChildren(self)




    def while_statement(self):

        localctx = CParser.While_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_while_statement)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.match(CParser.WHILE)
                self.state = 168
                self.match(CParser.LPAREN)
                self.state = 169
                self.expression()
                self.state = 170
                self.match(CParser.RPAREN)
                self.state = 171
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(CParser.WHILE)
                self.state = 174
                self.match(CParser.LPAREN)
                self.state = 175
                self.expression()
                self.state = 176
                self.match(CParser.RPAREN)
                self.state = 177
                self.compound_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(CParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(CParser.LPAREN, 0)

        def expression_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Expression_statementContext)
            else:
                return self.getTypedRuleContext(CParser.Expression_statementContext,i)


        def RPAREN(self):
            return self.getToken(CParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(CParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_for_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_statement" ):
                listener.enterFor_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_statement" ):
                listener.exitFor_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_statement" ):
                return visitor.visitFor_statement(self)
            else:
                return visitor.visitChildren(self)




    def for_statement(self):

        localctx = CParser.For_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_for_statement)
        try:
            self.state = 211
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(CParser.FOR)
                self.state = 182
                self.match(CParser.LPAREN)
                self.state = 183
                self.expression_statement()
                self.state = 184
                self.expression_statement()
                self.state = 185
                self.match(CParser.RPAREN)
                self.state = 186
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                self.match(CParser.FOR)
                self.state = 189
                self.match(CParser.LPAREN)
                self.state = 190
                self.expression_statement()
                self.state = 191
                self.expression_statement()
                self.state = 192
                self.expression()
                self.state = 193
                self.match(CParser.RPAREN)
                self.state = 194
                self.statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 196
                self.match(CParser.FOR)
                self.state = 197
                self.match(CParser.LPAREN)
                self.state = 198
                self.expression_statement()
                self.state = 199
                self.expression_statement()
                self.state = 200
                self.match(CParser.RPAREN)
                self.state = 201
                self.compound_statement()
                pass
